--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "eslint --fix"
+    ],
+    "*.{json,css,scss,md,html}": [
+      "prettier --write"
     ]
   }
 }
